# my_discovery_server

./: CMakeLists.txt  MyDiscoveryServer.cpp
certs/: governance.smime  governance_dds_sec.xml  permissions.smime  permissions_dds_sec.xml
